# bevy-jam-4

./: .dockerignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: rust.yml
assets/: enemy1.blend  enemy1.blend1  enemy1.glb  floor.blend  floor.blend1  floor.glb  player.blend  player.blend1  player.glb  player2.blend  player2.glb  ship1.blend  ship1.blend1  ship1.glb
assets/shaders/: line.wgsl  line_material.wgsl  ship.wgsl  space.wgsl
crates/server/: Cargo.toml  Dockerfile  README.md
crates/server/src/: main.rs
src/: bullet.rs  camera.rs  cli.rs  constants.rs  enemy.rs  input.rs  line_material.rs  main.rs  materials.rs  net.rs  player.rs  powerups.rs  server.rs  ship.rs  ui.rs  util.rs
src/net/: mod.rs  packet.rs
