[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[package]
name = "bevy-jam-4"
version.workspace = true
edition.workspace = true

[dependencies]
bevy = { version = "0.12.1", features = ["dynamic_linking"] }
bevy_ggrs = { version = "0.14.0", features = ["wasm-bindgen"] }
bevy_matchbox = { version = "0.8.0", features = ["ggrs"] }
clap = { version = "4.4.10", features = ["derive"] }
fastrand = "2.0.1"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
