[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[package]
name = "bevy-jam-4"
version.workspace = true
edition.workspace = true

[dependencies]
bevy = { version = "0.12.1" }
bevy_matchbox = { version = "0.8.0" }
bincode = "1.3.3"
clap = { version = "4.4.10", features = ["derive"] }
fastrand = "2.0.1"
flate2 = "1.0.28"
serde = { version = "1.0.193", features = ["derive"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
